--- a/index.html
+++ b/index.html
@@ -70,27 +70,47 @@
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="benefits-list list">
-            <li class="benefits-item icon-antenna">
+            <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-subtitle">Увага до деталей</h3>
               <p class="benefits-item-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="benefits-item icon-clock">
+            <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-subtitle">Пунктуальність</h3>
               <p class="benefits-item-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="benefits-item icon-diagram">
+            <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-subtitle">Планування</h3>
               <p class="benefits-item-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="benefits-item icon-astronaut">
+            <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-subtitle">Сучасні технології</h3>
               <p class="benefits-item-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -140,22 +160,40 @@
                 alt="Усміхнений хлопець в окулярах"
                 width="270"
               />
-              <h3 class="team-item-subtitle">Ігор Дем'яненко</h3>
-              <p class="team-item-text" lang="en">Product Designer</p>
-              <ul class="social-links list">
-                <li class="social-links-item">
-                  <a href="#" class="social-link link"></a>
-                </li>
-                <li class="social-links-item">
-                  <a href="#" class="social-link link"></a>
-                </li>
-                <li class="social-links-item">
-                  <a href="#" class="social-link link"></a>
-                </li>
-                <li class="social-links-item">
-                  <a href="#" class="social-link link"></a>
-                </li>
-              </ul>
+              <div class="team-card">
+                <h3 class="team-item-subtitle">Ігор Дем'яненко</h3>
+                <p class="team-item-text" lang="en">Product Designer</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
