Додає SVG в секцію Клієнти

--- a/index.html
+++ b/index.html
@@ -165,28 +165,28 @@
                 <p class="team-item-text" lang="en">Product Designer</p>
                 <ul class="social-links list">
                   <li class="social-links-item">
-                    <a href="#" class="social-link link">
+                    <a href="" class="social-link link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-item">
-                    <a href="#" class="social-link link">
+                    <a href="" class="social-link link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-item">
-                    <a href="#" class="social-link link">
+                    <a href="" class="social-link link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-item">
-                    <a href="#" class="social-link link">
+                    <a href="" class="social-link link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -201,8 +201,40 @@
                 alt="Усміхнена дівчина в окулярах"
                 width="270"
               />
-              <h3 class="team-item-subtitle">Ольга Рєпіна</h3>
-              <p class="team-item-text" lang="en">Frontend Developer</p>
+              <div class="team-card">
+                <h3 class="team-item-subtitle">Ольга Рєпіна</h3>
+                <p class="team-item-text" lang="en">Frontend Developer</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -210,8 +242,40 @@
                 alt="Усміхнений хлопець"
                 width="270"
               />
-              <h3 class="team-item-subtitle">Микола Тарасов</h3>
-              <p class="team-item-text" lang="en">Marketing</p>
+              <div class="team-card">
+                <h3 class="team-item-subtitle">Микола Тарасов</h3>
+                <p class="team-item-text" lang="en">Marketing</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -219,8 +283,40 @@
                 alt="Усміхнений хлопець в окулярах"
                 width="270"
               />
-              <h3 class="team-item-subtitle">Михайло Єрмаков</h3>
-              <p class="team-item-text" lang="en">UI Designer</p>
+              <div class="team-card">
+                <h3 class="team-item-subtitle">Михайло Єрмаков</h3>
+                <p class="team-item-text" lang="en">UI Designer</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a href="" class="social-link link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -230,22 +326,46 @@
           <h2 class="customers-title">Постійні клієнти</h2>
           <ul class="customers-list list">
             <li class="customers-item">
-              <a href="#" class="customers-link link"></a>
+              <a href="" class="customers-link link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customer-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <a href="#" class="customers-link link"></a>
+              <a href="" class="customers-link link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customer-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <a href="#" class="customers-link link"></a>
+              <a href="" class="customers-link link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customer-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <a href="#" class="customers-link link"></a>
+              <a href="" class="customers-link link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customer-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <a href="#" class="customers-link link"></a>
+              <a href="" class="customers-link link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customer-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <a href="#" class="customers-link link"></a>
+              <a href="" class="customers-link link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-customer-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
