--- a/index.html
+++ b/index.html
@@ -373,48 +373,68 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo link" href="./index.html" lang="en"
-          >Web<span class="footer-logo-studio">Studio</span></a
-        >
-        <address>
-          <ul class="footer-contacts-list list">
-            <li class="footer-item">
-              <a
-                class="footer-address link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+      <div class="container footer-address-social">
+        <div class="footer-logo-address">
+          <a class="footer-logo link" href="./index.html" lang="en"
+            >Web<span class="footer-logo-studio">Studio</span></a
+          >
+          <address>
+            <ul class="footer-contacts-list list">
+              <li class="footer-item">
+                <a
+                  class="footer-address link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-contacts link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-contacts link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <p class="footer-text">Приєднуйтесь</p>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="foter-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contacts link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="foter-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-contacts link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="foter-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="foter-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-        <p class="footer-text">Приєднуйтесь</p>
-        <ul class="footer-social list">
-          <li class="footer-social-item">
-            <a href="#" class="footer-social-link link"></a>
-          </li>
-          <li class="footer-social-item">
-            <a href="#" class="footer-social-link link"></a>
-          </li>
-          <li class="footer-social-item">
-            <a href="#" class="footer-social-link link"></a>
-          </li>
-          <li class="footer-social-item">
-            <a href="#" class="footer-social-link link"></a>
-          </li>
-        </ul>
+        </div>
       </div>
     </footer>
   </body>
