--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
           <li class="header-contacts-item">
             <a class="header-contacts link" href="mailto:info@devstudio.com">
               <svg class="header-contacts-icon" width="16" height="12">
-                <use href="/images/icons.svg#icon-envelope"></use>
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -51,7 +51,7 @@
           <li class="header-contacts-item">
             <a class="header-contacts link" href="tel:+380961111111">
               <svg class="header-contacts-icon" width="10" height="16">
-                <use href="/images/icons.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
